// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`textAreaField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
      >
        <label
          class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow23 uv_m4c9ow3f"
          for="_r_0_"
        >
          Test
        </label>
        <div
          class="uv_hlf4vn1"
        >
          <textarea
            aria-invalid="false"
            class="uv_hlf4vn3"
            id="_r_0_"
            name="test"
            rows="3"
            style="--uv_hlf4vn0: calc(1.5rem + 0px + 0px);"
          />
          <div
            class="uv_hlf4vn2 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3p uv_toi52u5v"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`textAreaField > should render correctly generated 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52uv uv_toi52u2j uv_toi52u31 uv_toi52u5d uv_toi52u5v"
        >
          <label
            class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow23 uv_m4c9ow3f"
            for="_r_7_"
          >
            Test
          </label>
          <span
            class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owc uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow1n uv_m4c9ow3f"
          >
            *
          </span>
        </div>
        <div
          class="uv_hlf4vn1"
        >
          <textarea
            aria-invalid="false"
            class="uv_hlf4vn3"
            id="_r_7_"
            name="test"
            rows="3"
            style="--uv_hlf4vn0: calc(1.5rem + 300px + 0px); resize: vertical; height: auto; min-height: calc(NaNpx + 2*0.75rem);"
          >
            This is an example
          </textarea>
          <div
            class="uv_hlf4vn2 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3p uv_toi52u5v"
          >
            <button
              aria-label="clear value"
              class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoeh uv_e1wcoej uv_e1wcoe19"
              type="button"
            >
              <svg
                class="styles__1sbwqkz0 styles_disabled_false__1sbwqkz1 styles_prominence_default__1sbwqkz3 styles_size_small__1sbwqkzg styles_undefined_compound_39__1sbwqkz1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <button
        class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe9 uv_e1wcoee uv_e1wcoei uv_e1wcoel"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`textAreaField > should submit with onSubmitEnter prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
      >
        <label
          class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow23 uv_m4c9ow3f"
          for="_r_3_"
        >
          Test
        </label>
        <div
          class="uv_hlf4vn1"
        >
          <textarea
            aria-invalid="false"
            class="uv_hlf4vn3"
            id="_r_3_"
            name="test"
            rows="3"
            style="--uv_hlf4vn0: calc(1.5rem + 0px + 0px); resize: vertical; height: auto; min-height: calc(NaNpx + 2*0.75rem);"
          >
            This is an example
          </textarea>
          <div
            class="uv_hlf4vn2 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3p uv_toi52u5v"
          />
        </div>
      </div>
      <button
        class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe9 uv_e1wcoee uv_e1wcoei uv_e1wcoel"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
